<resources>
    <string name="app_name">My Application</string>
    <string name="Title">Swimmer Taper App</string>
    <string name="configCameraButtonText">Config Camera</string>
    <string name="mainCameraButtonText">Main Camera</string>
    <string name="directToAdjust">Adjust Picture Settings</string>
    <string name="resizeButtonText">Resize</string>
    <string name="colorLower">Color Low</string>
    <string name="colorHigher">Color High</string>
    <string name="reset">Reset</string>
    <string name="hue">Hue</string>
    <string name="hsvbutton">HSVButton</string>
</resources>
