<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <s.m.myapplication.cameraview.CustomCameraView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        opencv:camera_id="any"
        opencv:show_fps="true" />

    <Button
        android:id="@+id/resizeButton"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/resizeButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/colorHighButton"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/colorHigher"
        app:layout_constraintBottom_toTopOf="@+id/colorLowButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/colorLowButton"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/colorLower"
        app:layout_constraintBottom_toTopOf="@+id/resizeButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/touch_coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X: 0, Y: 0"
        android:textColor="#B0171F"
        app:layout_constraintBottom_toTopOf="@+id/colorHighButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/touch_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#B0171F"
        android:text="Color: "
        app:layout_constraintBottom_toTopOf="@+id/touch_coordinates"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@+id/touch_color"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/HSVButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hsvbutton"
        app:layout_constraintBottom_toTopOf="@+id/Refresh"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
